--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,4 +37,12 @@
         android:text="@string/app_name"
         android:textColor="@android:color/black" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button3"
+        android:text="@string/show_bounce"
+        android:onClick="onClickBounce"
+        android:textColor="@android:color/black" />
+
 </RelativeLayout>
