--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,20 @@
         android:textColor="@android:color/black" />
 
     <Button
+        android:id="@+id/button4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/button3"
         android:text="@string/show_bounce"
         android:onClick="onBounceClick"
+        android:textColor="@android:color/black" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button4"
+        android:text="@string/show_loading"
+        android:onClick="onLoadingClick"
         android:textColor="@android:color/black" />
 
 </RelativeLayout>
