--- a/aappz/src/main/res/layout/dialog_loading_default.xml
+++ b/aappz/src/main/res/layout/dialog_loading_default.xml
@@ -5,14 +5,15 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingStart="@dimen/_48sdp"
+    android:paddingTop="@dimen/_16sdp"
+    android:paddingEnd="@dimen/_48sdp"
+    android:paddingBottom="@dimen/_16sdp">
 
     <ProgressBar
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
-        android:layout_marginStart="@dimen/_32sdp"
-        android:layout_marginTop="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_32sdp" />
+        android:layout_width="@dimen/_80sdp"
+        android:layout_height="@dimen/_80sdp" />
 
     <TextView
         android:id="@+id/dialog_title"
@@ -21,9 +22,8 @@
         android:layout_marginTop="@dimen/_2sdp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
-        android:paddingBottom="@dimen/_16sdp"
         android:textColor="@android:color/black"
-        android:textSize="@dimen/_16ssp"
+        android:textSize="@dimen/_14ssp"
         tools:text="Please wait.." />
 
 </LinearLayout>
