--- a/app/src/main/res/layout/activity_date.xml
+++ b/app/src/main/res/layout/activity_date.xml
@@ -3,17 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    tools:context=".MainActivity">
+    android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_32sdp"
         android:gravity="center"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/_8sdp"
@@ -23,9 +22,9 @@
             tools:ignore="HardcodedText" />
 
         <Button
-            android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onClick="onCheck"
             android:paddingStart="@dimen/_32sdp"
             android:paddingEnd="@dimen/_32sdp"
             android:text="Check!"
@@ -35,8 +34,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -52,8 +51,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -69,8 +68,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -86,8 +85,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -103,8 +102,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -120,8 +119,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -137,8 +136,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -154,8 +153,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -171,8 +170,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -188,8 +187,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -205,8 +204,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -222,8 +221,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -239,8 +238,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -256,8 +255,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -273,8 +272,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -290,8 +289,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -307,8 +306,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -324,8 +323,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -341,8 +340,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
@@ -358,8 +357,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Example"
             android:layout_marginTop="@dimen/_16sdp"
+            android:text="Example"
             android:textSize="@dimen/_12ssp"
             tools:ignore="HardcodedText" />
 
