--- a/app/src/main/res/layout/activity_date.xml
+++ b/app/src/main/res/layout/activity_date.xml
@@ -32,6 +32,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -49,6 +50,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -66,6 +68,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -83,6 +86,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -100,6 +104,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -117,6 +122,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -134,6 +140,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -151,6 +158,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -168,6 +176,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -185,6 +194,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -202,6 +212,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -219,6 +230,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -236,6 +248,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label13"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -253,6 +266,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -270,6 +284,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -287,6 +302,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -304,6 +320,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label17"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -321,6 +338,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label18"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -338,6 +356,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -355,6 +374,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
+            android:id="@+id/label20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
