--- a/aappz/src/main/res/layout/dialog_normal.xml
+++ b/aappz/src/main/res/layout/dialog_normal.xml
@@ -6,20 +6,42 @@
     android:background="@drawable/dialog_background"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingStart="@dimen/_48sdp"
-    android:paddingTop="@dimen/_16sdp"
-    android:paddingEnd="@dimen/_48sdp"
-    android:paddingBottom="@dimen/_16sdp">
+    android:padding="@dimen/_16sdp">
 
     <TextView
         android:id="@+id/dialog_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_2sdp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center"
         android:textColor="@android:color/black"
-        android:textSize="@dimen/_14ssp"
-        tools:text="Please wait.." />
+        android:textSize="@dimen/_16ssp"
+        tools:text="Title" />
+
+    <LinearLayout
+        android:id="@+id/dialog_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginBottom="@dimen/_4sdp"
+            android:alpha="0.5"
+            android:background="@android:color/darker_gray" />
+
+        <TextView
+            android:id="@+id/dialog_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_14ssp"
+            tools:text="Message.." />
+
+    </LinearLayout>
 
 </LinearLayout>
