--- a/aappz/src/main/res/layout/dialog_normal.xml
+++ b/aappz/src/main/res/layout/dialog_normal.xml
@@ -1,93 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/dialog_background"
     android:gravity="center"
-    android:orientation="vertical"
+    android:overScrollMode="never"
     android:paddingStart="@dimen/_16sdp"
     android:paddingTop="@dimen/_8sdp"
-    android:paddingEnd="@dimen/_16sdp">
+    android:paddingEnd="@dimen/_16sdp"
+    android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/dialog_title"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/_16ssp"
-        tools:text="Title" />
+        android:orientation="vertical">
 
-    <View
-        android:id="@+id/dialog_message_layout"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/_4sdp"
-        android:layout_marginBottom="@dimen/_4sdp"
-        android:alpha="0.5"
-        android:background="@android:color/darker_gray" />
-
-    <TextView
-        android:id="@+id/dialog_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center"
-        android:textColor="@android:color/black"
-        android:textSize="@dimen/_14ssp"
-        tools:text="Message.." />
-
-    <HorizontalScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_2sdp"
-        android:scrollbars="none">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <TextView
+            android:id="@+id/dialog_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal">
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_16ssp"
+            tools:text="Title" />
 
-            <Button
-                android:id="@+id/dialog_button_1"
-                style="@style/Widget.AppCompat.Button.Borderless"
+        <View
+            android:id="@+id/dialog_message_layout"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="@dimen/_4sdp"
+            android:layout_marginBottom="@dimen/_4sdp"
+            android:alpha="0.5"
+            android:background="@android:color/darker_gray" />
+
+        <TextView
+            android:id="@+id/dialog_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textSize="@dimen/_14ssp"
+            tools:text="Message.." />
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:overScrollMode="never"
+            android:scrollbars="none">
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_14ssp"
-                tools:text="Back" />
+                android:layout_gravity="center"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/dialog_button_2"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_14ssp"
-                android:visibility="gone"
-                tools:text="Back" />
+                <Button
+                    android:id="@+id/dialog_button_1"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/_14ssp"
+                    tools:text="Back" />
 
-            <Button
-                android:id="@+id/dialog_button_3"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/_14ssp"
-                android:visibility="gone"
-                tools:text="Back" />
+                <Button
+                    android:id="@+id/dialog_button_2"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/_14ssp"
+                    android:visibility="gone"
+                    tools:text="Back" />
 
-        </LinearLayout>
+                <Button
+                    android:id="@+id/dialog_button_3"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/_14ssp"
+                    android:visibility="gone"
+                    tools:text="Back" />
 
-    </HorizontalScrollView>
+            </LinearLayout>
 
-</LinearLayout>
+        </HorizontalScrollView>
+
+    </LinearLayout>
+
+</ScrollView>
