--- a/aappz/src/main/res/layout/dialog_input.xml
+++ b/aappz/src/main/res/layout/dialog_input.xml
@@ -60,17 +60,46 @@
             tools:ignore="LabelFor"
             tools:text="Some text here.." />
 
-        <Button
-            android:id="@+id/dialog_button"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="sans-serif-light"
-            android:gravity="center"
-            android:textColor="@android:color/black"
-            android:textSize="@dimen/_14ssp"
-            tools:text="Submit" />
+            android:layout_marginTop="@dimen/_2sdp"
+            android:overScrollMode="never"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/dialog_button_2"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/_14ssp"
+                    android:visibility="gone"
+                    tools:text="Cancel"
+                    tools:visibility="visible" />
+
+                <Button
+                    android:id="@+id/dialog_button_1"
+                    style="@style/Widget.AppCompat.Button.Borderless"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:gravity="center"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/_14ssp"
+                    tools:text="Submit" />
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
 
     </LinearLayout>
 
