Add declare-styleable for ShadowLayout

--- a/aappz/src/main/res/values/styles.xml
+++ b/aappz/src/main/res/values/styles.xml
@@ -3,4 +3,12 @@
 
     <style name="Permissions.TransparentTheme" parent="android:Theme.Light" />
 
+    <declare-styleable name="ShadowLayout">
+        <attr name="cornerRadius" format="dimension" />
+        <attr name="shadowRadius" format="dimension" />
+        <attr name="shadowColor" format="color" />
+        <attr name="dx" format="dimension" />
+        <attr name="dy" format="dimension" />
+    </declare-styleable>
+
 </resources>
