--- a/aappz/src/main/res/values/dimen.xml
+++ b/aappz/src/main/res/values/dimen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_corner_radius">4dp</dimen>
-    <dimen name="default_shadow_radius">4dp</dimen>
+    <dimen name="default_corner_radius">@dimen/_2sdp</dimen>
+    <dimen name="default_shadow_radius">@dimen/_2sdp</dimen>
 </resources>
